--- a/Web/rsreact/src/InstructionWindow.css
+++ b/Web/rsreact/src/InstructionWindow.css
@@ -1,12 +1,12 @@
 #instructionContainer{
     width:10%;
-    height:400px;
+    padding: 1%;
     border:1px solid black;
-    position:absolute;
-    top:0;
-    right:0;
+    position: absolute;
+    top: 7.5%;
+    right: 0;
     margin: 1%
 }
 .instructionOption{
-    margin: 10px;
+    margin-bottom: 4%;
 }
