--- a/Web/rsreact/src/InstructionWindow.css
+++ b/Web/rsreact/src/InstructionWindow.css
@@ -1,12 +1,14 @@
 #instructionContainer{
-    width:10%;
-    padding: 1%;
+    width:400px;
+    height:400px;
+    background:blue;
+    padding: 10px;
     border:1px solid black;
     position: absolute;
-    top: 7.5%;
+    top: 7px;
     right: 0;
-    margin: 1%
+    margin: 1px;
 }
 .instructionOption{
-    margin-bottom: 4%;
+    margin-bottom: 1px;
 }
