robot now visible in map

--- a/Web/rsreact/src/Grid.css
+++ b/Web/rsreact/src/Grid.css
@@ -12,4 +12,9 @@ width:400px;
 }
 
 .mapOverviewContainer{
+    margin-left: 35%;
+    margin-top: 10%;
+}
+.robotBob{
+    background-image: url("../public/robotbob.svg");
 }
