--- a/Web/rsreact/src/Grid.css
+++ b/Web/rsreact/src/Grid.css
@@ -15,6 +15,16 @@ width:400px;
     margin-left: 35%;
     margin-top: 10%;
 }
+/*
 .robotBob{
     background-image: url("../public/robotbob.svg");
+}
+*/
+.robotContainer{
+    width:30px;
+    height:30px;
+}
+.packageContainer{
+    width:30px;
+    height:30px;
 }
