--- a/Web/rsreact/src/Command/InstructionWindow.css
+++ b/Web/rsreact/src/Command/InstructionWindow.css
@@ -1,7 +1,7 @@
 #instructionContainer{
     width:400px;
     height:400px;
-    background:blue;
+    background: #2549b3;
     padding: 10px;
     border:1px solid black;
     position: absolute;
