--- a/Web/rsreact/src/Command/InstructionOverview.css
+++ b/Web/rsreact/src/Command/InstructionOverview.css
@@ -1,9 +1,8 @@
 .instructionOverviewContainer{
     width:400px;
     height:800px;
-    border:1px solid black;
     position: absolute;
-    top: 70px;
+    top: 14%;
     right: 0;
 
 }
