--- a/Web/rsreact/src/Command/InstructionWindowTemp.css
+++ b/Web/rsreact/src/Command/InstructionWindowTemp.css
@@ -1,10 +1,11 @@
 #instructionContainer{
-    background:blue;
+    background: rgb(75, 74, 74);
     width:400px;
     margin-left:auto;
     margin-right:auto;
 
 }
 .instructionOption{
+    margin: 10px;
     margin-bottom: 4%;
 }
