--- a/Web/rsreact/src/Command/InstructionWindow.css
+++ b/Web/rsreact/src/Command/InstructionWindow.css
@@ -1,14 +1,11 @@
 #instructionContainer{
+    background: rgb(75, 74, 74);
     width:400px;
-    height:400px;
-    background: #2549b3;
-    padding: 10px;
-    border:1px solid black;
-    position: absolute;
-    top: 7px;
-    right: 0;
-    margin: 1px;
+    margin-left:auto;
+    margin-right:auto;
+
 }
 .instructionOption{
-    margin-bottom: 1px;
+    margin: 10px;
+    margin-bottom: 4%;
 }
