--- a/Web/rsreact/src/Command/InstructionOverview.css
+++ b/Web/rsreact/src/Command/InstructionOverview.css
@@ -2,8 +2,9 @@
     width:400px;
     height:800px;
     position: absolute;
-    top: 14%;
-    right: 0;
+    top: 16%;
+
+    right: 2%;
 
 }
 .instructionOverview{
