--- a/Web/rsreact/src/Design.css
+++ b/Web/rsreact/src/Design.css
@@ -1,9 +1,9 @@
 body{
-    background-color: #202020;
+    background-color: #3e3e3e;
 }
 #indexHeader{
     font-family: "Helvetica Neue";
-    background-color: #2B3A45;
+    background-color: #486274;
     width: 100%;
     color: aliceblue;
     padding: 1%;
