--- a/Web/rsreact/src/Command/TabWindow.css
+++ b/Web/rsreact/src/Command/TabWindow.css
@@ -4,11 +4,11 @@
 }
 
 .tabsContainer{
-    background: #405767;
+    background: #5e849a;
 }
 
 .tab:hover{
-    background: #59768a;
+    background: #6e9bb5;
 }
 
 /* Style the buttons inside the tab */
