--- a/Web/rsreact/src/Command/InstructionWindow.css
+++ b/Web/rsreact/src/Command/InstructionWindow.css
@@ -1,6 +1,7 @@
 #instructionContainer{
     background: rgb(75, 74, 74);
     width:400px;
+    height: 100px;
     margin-left:auto;
     margin-right:auto;
 
