--- a/Web/rsreact/src/Manual/RobotController.css
+++ b/Web/rsreact/src/Manual/RobotController.css
@@ -1,23 +1,37 @@
+#robotController{
+    float: right;
+    margin-top: -250px;
+    margin-right: 30px;
+}
+
 #remoteContainer{
-    width:10%;
+    width: 162px;
     border:1px solid black;
-    margin: 1.5%;
 
 }
 
-#forward_button{
-    position: relative;
-    left: 39%;
+#wasdButton{
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
-#bottom_buttons{
-    position: relative;
-    left: 17%;
+#toggleText{
+    margin-bottom: 5px;
+}
+
+#topButtons{
+    margin-left: 54px;
+}
+
+#stop_button{
+    margin-top: 5px;
+    margin-bottom: 10px;
+    width: 100px;
 }
 
 .moveButton{
     margin: 1%;
-    width: 20%;
+    width: 50px;
     margin-bottom: 2%;
 
 }
