--- a/Web/rsreact/src/Manual/RobotController.css
+++ b/Web/rsreact/src/Manual/RobotController.css
@@ -1,6 +1,7 @@
 #robotController{
-    float: right;
-    margin-top: -250px;
+    position: absolute;
+    left: 86%;
+    margin-top: -300px;
     margin-right: 30px;
 }
 
